--- a/restful-app/pom.xml
+++ b/restful-app/pom.xml
@@ -40,6 +40,20 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-jpa</artifactId>
+		    <version>2.2.6.RELEASE</version>
+		</dependency>
+				
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+			<scope>provided</scope>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
