--- a/restful-app/pom.xml
+++ b/restful-app/pom.xml
@@ -40,20 +40,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-data-jpa</artifactId>
-		    <version>2.2.6.RELEASE</version>
-		</dependency>
-				
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.12</version>
-			<scope>provided</scope>
-		</dependency>
-	
 	</dependencies>
 
 	<build>
@@ -62,7 +48,28 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-antrun-plugin</artifactId>
+			    <version>1.8</version>
+			    <executions>
+			        <execution>
+			            <phase>test</phase>
+			            <goals>
+			                <goal>run</goal>
+			            </goals>
+			            <configuration>
+			                <tasks>
+			                    <echo>Using env.test.properties</echo>
+			                    <copy file="${basedir}/src/main/resources/contents.json" tofile="${basedir}/target/contents.json"/>
+			                    </tasks>
+			                </configuration>
+			            </execution>
+			        </executions>
+		    </plugin>
 		</plugins>
 	</build>
+	
+	
 
 </project>
